# fno-diffusion

./: README.md  pyproject.toml  requirements.txt
data/: download_pdebench.py
fno_diffusion/: data_loader.py  model.py  train.py
notebooks/: train_val_loss_curves.ipynb
scripts/: run_training.py
